--- a/www/release/Index.html
+++ b/www/release/Index.html
@@ -1,4 +1,197 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width,initial-scale=1"> <!--link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"--> <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script--> <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script--> <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries --> <!-- WARNING: Respond.js doesn't work if you view the page via file:// --> <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]--> <link href="styles.css" rel="stylesheet"> <title>Example</title> </head> <body> <header> <hgroup> <h1> Header "h1" from hgroup </h1> <h2> Header "h2" from hgroup </h2> </hgroup> </header> <nav> <menu> <li> <a href="javascript:void(0);"> First link from the "nav" block </a> </li> <li> <a href="javascript:void(0);"> Second link from the "nav" block </a> </li> </menu> </nav> <section> <article> <h1> Article title from the block "article" </h1> <p> Paragraph text in "article" block </p> <details> <summary> Block "details", tag text of "summary" </summary> <p> Paragraph from "details" </p> </details> </article> </section> <footer> <time> Tag content for "time" from "footer" </time> <p> Paragraph content from "footer" </p> </footer> <script src="scripts.js"></script> </body> </html>
+<!DOCTYPE html>
+<!--suppress ALL -->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+        .container {
+            position: relative;
+            top: 50px;
+            width: 30px;
+            height: 30px;
+            margin: 0 auto;
+        }
+
+        #sec{
+            position: absolute;
+            top: 25px;
+            left: 15px;
+            width: 2px;
+            height: 90px;
+            padding: 0;
+            border-radius: 1px;
+            transform-origin: 1px 80px 0;
+            background-color: #2b2a29;
+        }
+
+        #min{
+            position: absolute;
+            top: 35px;
+            left: 14px;
+            width: 4px;
+            height: 80px;
+            padding: 0;
+            border-radius: 2px;
+            transform-origin: 2px 70px 0;
+            background-color: #2b2a29;
+        }
+        #hour{
+            position: absolute;
+            top: 45px;
+            left: 12px;
+            width: 8px;
+            height: 70px;
+            padding: 0;
+            border-radius: 4px;
+            transform-origin: 4px 60px 0;
+            background-color: #2b2a29;
+        }
+#pon{
+  position: absolute;
+  z-index: -20;
+  width: 220px;
+  height: 220px;
+  border-radius: 100%;
+  left: -100px;
+  top: -10px;
+  background-color: #fcca66;
+}
+        .container > div {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 5px;
+            transform-origin: 50% 350% 0;
+            background-color: #48b382;
+            border-radius: 100%;
+            text-align: center;
+            color: #2b2a29;
+        }
+
+        .h1 {
+            transform: rotate(30deg);
+        }
+
+        .h2 {
+            transform: rotate(60deg);
+        }
+
+        .h3 {
+            transform: rotate(90deg);
+        }
+
+        .h4 {
+            transform: rotate(120deg);
+        }
+
+        .h5 {
+            transform: rotate(150deg);
+        }
+
+        .h6 {
+            transform: rotate(180deg);
+        }
+
+        .h7 {
+            transform: rotate(210deg);
+        }
+
+        .h8 {
+            transform: rotate(240deg);
+        }
+
+        .h9 {
+            transform: rotate(270deg);
+        }
+
+        .h10 {
+            transform: rotate(300deg);
+        }
+        .h11 {
+            transform: rotate(330deg);
+        }
+        .h12 {
+            transform: rotate(360deg);
+        }
+#fcca66
+    </style>
+</head>
+<body>
+<div class="container">
+    <div class="h1 h"></div>
+
+    <div class="h2 h"></div>
+
+    <div class="h3 h"></div>
+
+    <div class="h4 h"></div>
+
+    <div class="h5 h"></div>
+
+    <div class="h6 h"></div>
+
+    <div class="h7 h"></div>
+
+    <div class="h8 h"></div>
+
+    <div class="h9 h"></div>
+
+    <div class="h10 h"></div>
+
+    <div class="h11 h"></div>
+
+    <div class="h12 h"></div>
+    <div id = "sec"></div>
+    <div id = "min"></div>
+    <div id = "hour"></div>
+    <div id = "pon"></div>
+  </div>
+    <script>
+const secHand = document.getElementById('sec');
+        const minHand = document.getElementById('min');
+        const hourHand = document.getElementById('hour');
+        const arrOfNum = document.getElementsByClassName('h');
+let pp = document.createElement("p");
+for (let i = 1; i <= arrOfNum.length; i++){
+  arrOfNum[i-1].style.cssText = `z-index: 0;`;
+  let p = pp.cloneNode();
+  p.textContent = `${i}`;
+  let alf = 30*i;
+  let cos = Math.cos(alf*(Math.PI/180));
+  let sin = Math.sin(alf*(Math.PI/180));
+  let rx = 0 - 1;
+  let ry = 0 - 90;
+  /*rx = x0 - x;
+ry = y0 - y;
+c = Math.cos(alpha);
+s = Math.sin(alpha);
+x1 = x + rx * c - ry * s;
+y1 = y + rx * s + ry * c;*/
+  p.style.cssText = `position: absolute; text-alirn:center; z-index: 10000; top: ${ 80 + rx * sin + ry * cos}px; left: ${ 7 + rx * cos - ry * sin}px`;//x = r*cos(fi)
+  document.getElementsByClassName('container')[0].appendChild(p);//элемент.appendChild(новый_дочерний_элемент)
+}
+        const time = new Date();
+        let sec = (+time.getSeconds()) * 6;
+        let min = (+time.getMinutes()) * 6;
+        let hour = (+time.getHours()) * 30 + (+time.getMinutes())*0.5;
+        secHand.style.cssText = `transform: rotate(${sec}deg);`
+        minHand.style.cssText = `transform: rotate(${min}deg);`
+        hourHand.style.cssText = `transform: rotate(${hour}deg);`
+        const secTic = setInterval(() => {
+            sec += 6;
+        secHand.style.cssText = `transform: rotate(${sec}deg);`
+        }, 1000);
+        const minTic = setInterval(() => {
+            min += 6;
+        minHand.style.cssText = `transform: rotate(${min}deg);`
+        }, 60000);
+        const hourTic = setInterval(() => {
+            hour += 0.5;
+        hourHand.style.cssText = `transform: rotate(${hour}deg);`
+        }, 60000);
+    </script>
+</body>
+</html>
